--- a/editor/sidebar/style.scss
+++ b/editor/sidebar/style.scss
@@ -10,8 +10,7 @@
 
 	@include break-small() {
 		position: fixed;
-		overflow-y: scroll;
-		overflow-x: hidden;
+		overflow: auto;
 	}
 
 	@include break-medium() {
@@ -19,9 +18,8 @@
 	}
 
 	> .components-panel {
-		margin-left: -1px;
-		margin-right: -1px;
-
+		border-left: none;
+		border-right: none;
 		&:first-child {
 			margin-top: -1px;
 		}
